# 8chip

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  README.md  shell.nix
src/: CMakeLists.txt  display.cpp  display.hpp  keyboard.cpp  keyboard.hpp  log.cpp  log.hpp  main.cpp  processor.cpp  processor.hpp  ram.cpp  ram.hpp  timer.cpp  timer.hpp
tools/: do.py
